--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "heroku-postbuild": "cd client && npm install --only=dev --no-shrinkwrap && npm run build",
-    "start": "node ./bin/www"
+    "build": "cd client && npm run build",
+    "install-client":"cd client && npm install",
+    "start": "node ./bin/www",
+    "client":"cd client && npm start"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
