--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
   },
   "proxy":"http://localhost:9000",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start -o",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
