--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build",
-    "start": "npm run start & (cd client && npm run start)",
+    "start": "npm run start & (cd client && npm run start)"
     
   },
   "dependencies": {
