--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build",
-    "start": "npm run start & (cd client && npm run start)"
+     "start": "node app.js",
+     "heroku-postbuild": "cd client && npm install && npm run build"
     
   },
+
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
