--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-     "start": "node app.js", 
+     "start": "concurrently \"node app.js\" \"cd client && npm run start\"",
      "heroku-postbuild": "cd client && npm install && npm run build"
     
   },
